engine/scripting/native_api/dse_api.h

// ============================================================
// Context Setup — 引擎初始化时调用一次
// ============================================================

DSE_CAPI void dse_native_api_init(
    void* world,           // World*
    void* asset_manager,   // AssetManager*
    void* audio_system,    // AudioSystem* (可为 nullptr)
    void  (*quit_fn)(void),
    void  (*set_title_fn)(const char*),
    float (*get_fps_fn)(void),
    void  (*set_fps_fn)(float),
    int   (*get_draw_calls_fn)(void)   // 可为 nullptr
);
DSE_CAPI void  dse_morph_simple_set_weight_index(uint32_t e, int idx, float w);
DSE_CAPI float dse_morph_simple_get_weight(uint32_t e, const char* name);
DSE_CAPI float dse_morph_simple_get_weight_index(uint32_t e, int idx);
DSE_CAPI void  dse_morph_simple_set_enabled(uint32_t e, int enabled);
// ============================================================
// Gameplay3D（破碎 / 布料 / 流体，手写 dse_api_gameplay3d.cpp）
// ============================================================
// 纯 ECS 组件控制，操作全局 World。可选「保持当前值」字段以 NaN 哨兵表示；
// 固定默认值由调用方（Lua 薄包装）解析后传入。

// Fracture：source 0=Prefractured 1=RuntimeVoronoi。
DSE_CAPI void dse_fracture_add(uint32_t e, int source, uint32_t fragment_count,
                               float break_force, float health);
DSE_CAPI void dse_fracture_set_params(uint32_t e, float explosion_force, float fragment_lifetime,
                                      float fade_duration, float mass_scale);  // NaN=保持
DSE_CAPI void dse_fracture_apply_damage(uint32_t e, float damage, float ix, float iy, float iz);
DSE_CAPI void dse_fracture_trigger(uint32_t e, float ix, float iy, float iz);
DSE_CAPI int  dse_fracture_is_fractured(uint32_t e);
// Cloth。
DSE_CAPI void dse_cloth_add(uint32_t e, uint32_t solver_iterations, float stiffness,
                            float damping, float bend_stiffness);
DSE_CAPI void dse_cloth_set_wind(uint32_t e, float wx, float wy, float wz, float turbulence);  // turbulence NaN=保持
DSE_CAPI void dse_cloth_set_gravity(uint32_t e, float gx, float gy, float gz);
DSE_CAPI void dse_cloth_pin_vertices(uint32_t e, const uint32_t* vertices, int count);
DSE_CAPI void dse_cloth_add_sphere_collider(uint32_t e, uint32_t collider_entity, float radius);
// Fluid：shape 0=Point 1=Sphere 2=Box。
DSE_CAPI void dse_fluid_add_emitter(uint32_t e, int shape, float emission_rate,
                                    float particle_lifetime, float emit_speed);
DSE_CAPI void dse_fluid_set_physics(uint32_t e, float viscosity, float surface_tension,
                                    float rest_density, float gas_stiffness);  // NaN=保持
DSE_CAPI void dse_fluid_set_rendering(uint32_t e, float r, float g, float b, float a,
                                      float refraction, float fresnel, float specular);  // refraction/fresnel/specular NaN=保持
DSE_CAPI void dse_fluid_set_emit_direction(uint32_t e, float dx, float dy, float dz, float spread);  // spread NaN=保持
DSE_CAPI void dse_fluid_set_floor(uint32_t e, float floor_y, float restitution);  // NaN=保持
DSE_CAPI uint32_t dse_fluid_get_particle_count(uint32_t e);
// Ragdoll（仅设标志，激活由 RagdollSystem 处理）。auto_setup/active 用 int(0/1)。
DSE_CAPI void dse_ragdoll_add(uint32_t e, float total_mass, int auto_setup,
                              float joint_stiffness, float joint_damping);
DSE_CAPI void dse_ragdoll_activate(uint32_t e);
DSE_CAPI void dse_ragdoll_deactivate(uint32_t e);
DSE_CAPI int  dse_ragdoll_is_active(uint32_t e);
DSE_CAPI void dse_ragdoll_set_collision_layer_mask(uint32_t e, uint32_t layer, uint32_t mask);
// SoftBody。gravity_scale NaN=保持。
DSE_CAPI void dse_softbody_add(uint32_t e, float stiffness, int iterations,
                               float damping, float volume_stiffness);
DSE_CAPI void dse_softbody_set_gravity(uint32_t e, int use_gravity, float gravity_scale);
DSE_CAPI void dse_softbody_pin_vertex(uint32_t e, int vertex_index);
DSE_CAPI uint32_t dse_softbody_get_particle_count(uint32_t e);
// Vehicle（raycast 车辆）。set_input 内部 clamp 到合法范围。
DSE_CAPI void dse_vehicle_add(uint32_t e, float max_engine_force, float max_brake_force,
                              float max_steer_angle);
DSE_CAPI void dse_vehicle_add_wheel(uint32_t e, float px, float py, float pz, float radius,
                                    int is_drive, int is_steer, float susp_stiffness,
                                    float susp_damping);
DSE_CAPI void dse_vehicle_set_input(uint32_t e, float throttle, float brake, float steering);
DSE_CAPI float dse_vehicle_get_speed(uint32_t e);
DSE_CAPI uint32_t dse_vehicle_get_wheel_count(uint32_t e);
// Rope。get_positions：填充 out_xyz（最多 max_points 点×3 float），返回点总数；
// out_xyz=null 时仅返回总数供预分配。gravity_scale NaN=保持。
DSE_CAPI void dse_rope_add(uint32_t e, int segment_count, float segment_length,
                           float damping, int iterations);
DSE_CAPI void dse_rope_set_anchors(uint32_t e, uint32_t anchor_a, uint32_t anchor_b,
                                   float oax, float oay, float oaz,
                                   float obx, float oby, float obz);
DSE_CAPI int  dse_rope_get_positions(uint32_t e, float* out_xyz, int max_points);
DSE_CAPI void dse_rope_set_gravity(uint32_t e, int use_gravity, float gravity_scale);
// Buoyancy。
DSE_CAPI void dse_buoyancy_add(uint32_t e, float water_level, float buoyancy_force,
                               float water_drag, float angular_drag, float submerge_depth);
DSE_CAPI void dse_buoyancy_add_sample_point(uint32_t e, float ox, float oy, float oz,
                                            float force_scale);
DSE_CAPI float dse_buoyancy_get_submerge_ratio(uint32_t e);
DSE_CAPI void dse_buoyancy_set_use_fluid(uint32_t e, int use_fluid);
// ---- Batch 3 环境子系统（无物理依赖）。浮点 NaN=保持当前值。 ----
// Weather。type: 0=None,1=Rain,2=Snow；set 中 type<0=保持。spawn 中 max_particles<0=保持。
DSE_CAPI void dse_weather_add(uint32_t e, int type, float intensity);
DSE_CAPI void dse_weather_set(uint32_t e, int type, float intensity,
                              float wind_x, float wind_z);
DSE_CAPI void dse_weather_set_spawn(uint32_t e, float radius, float height,
                                    int max_particles);
// SnowCover。snow_cover_get 填充 out_*（可为 null），返回 1=存在/0=缺失。
// set_texture：path=null 仅改 tiling。
DSE_CAPI void dse_snow_cover_add(uint32_t e);
DSE_CAPI void dse_snow_cover_set(uint32_t e, float target_coverage,
                                 float accumulation_rate, float melt_rate);
DSE_CAPI void dse_snow_set_appearance(uint32_t e, float albedo_r, float albedo_g,
                                      float albedo_b, float roughness, float metallic,
                                      float threshold, float sharpness);
DSE_CAPI int  dse_snow_cover_get(uint32_t e, float* out_coverage,
                                 float* out_target, int* out_enabled);
DSE_CAPI void dse_snow_cover_set_enabled(uint32_t e, int enabled);
DSE_CAPI void dse_snow_set_texture(uint32_t e, const char* path, float tiling);
DSE_CAPI void dse_snow_set_displacement(uint32_t e, float displacement_height,
                                        float deformation_strength);
DSE_CAPI void dse_snow_cover_remove(uint32_t e);
// Atmosphere（物理天空参数）。
DSE_CAPI void dse_atmosphere_add(uint32_t e);
DSE_CAPI void dse_atmosphere_set_params(uint32_t e, float planet_radius,
                                        float atmosphere_height, float sun_disk_angle);
DSE_CAPI void dse_atmosphere_set_rayleigh(uint32_t e, float coeff_r, float coeff_g,
                                          float coeff_b, float scale_height);
DSE_CAPI void dse_atmosphere_set_mie(uint32_t e, float coeff, float scale_height, float g);
// DayNightCycle。set_location 中 day_of_year<=0=保持。get_sun_direction 填充 out_xyz(3)。
DSE_CAPI void dse_day_night_add(uint32_t e, float time_of_day, int auto_advance,
                                float time_speed);
DSE_CAPI void dse_day_night_set_time(uint32_t e, float time_of_day);
DSE_CAPI float dse_day_night_get_time(uint32_t e);
DSE_CAPI void dse_day_night_set_speed(uint32_t e, float speed);
DSE_CAPI void dse_day_night_set_location(uint32_t e, float latitude, float longitude,
                                         int day_of_year);
DSE_CAPI float dse_day_night_get_sun_elevation(uint32_t e);
DSE_CAPI void dse_day_night_get_sun_direction(uint32_t e, float* out_xyz);
// VolumetricCloud。
DSE_CAPI void dse_volumetric_cloud_add(uint32_t e);
DSE_CAPI void dse_cloud_set_layer(uint32_t e, float bottom, float top,
                                  float coverage, float density);
DSE_CAPI void dse_cloud_set_wind(uint32_t e, float dir_x, float dir_y, float speed);
// ============================================================
// 动画子系统（L4/L5，纯 ECS）。浮点 NaN=保持当前值。
// ============================================================

// ---- 2D 帧动画（AnimatorComponent）。add_state: loop 为 0/1；frame_handles 可为 null。
// pop_event 将事件名写入 out（null 结尾，按 cap 截断），返回 1=弹出/0=无。 ----
DSE_CAPI void dse_anim2d_add(uint32_t e);
DSE_CAPI void dse_anim2d_add_state(uint32_t e, const char* name, float fps, int loop,
                                   const uint32_t* frame_handles, int handle_count);
DSE_CAPI void dse_anim2d_add_event(uint32_t e, const char* state_name,
                                   float normalized_time, const char* event_name);
// ============================================================
// Extended Context Setup — 扩展上下文（metrics 回调 + floating origin）
// ============================================================

DSE_CAPI void dse_native_api_init_ext(
    int   (*get_max_batch_sprites_fn)(void),
    int   (*get_sprite_count_fn)(void),
    int   (*get_gpu_driven_active_fn)(void),
    int   (*get_gpu_indirect_draw_count_fn)(void),
    int   (*get_gpu_total_instances_fn)(void),
    void* floating_origin);