GameScripts/DSEngine.Runtime/Generated/NativeManual.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_morph_simple_set_weight_index")]
    internal static partial void dse_morph_simple_set_weight_index(uint e, int idx, float w);

    [LibraryImport(Lib, EntryPoint = "dse_morph_simple_get_weight", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial float dse_morph_simple_get_weight(uint e, string name);

    [LibraryImport(Lib, EntryPoint = "dse_morph_simple_get_weight_index")]
    internal static partial float dse_morph_simple_get_weight_index(uint e, int idx);

    [LibraryImport(Lib, EntryPoint = "dse_morph_simple_set_enabled")]
    internal static partial void dse_morph_simple_set_enabled(uint e, int enabled);

    [LibraryImport(Lib, EntryPoint = "dse_fracture_add")]
    internal static partial void dse_fracture_add(uint e, int source, uint fragmentCount, float breakForce, float health);

    [LibraryImport(Lib, EntryPoint = "dse_fracture_set_params")]
    internal static partial void dse_fracture_set_params(uint e, float explosionForce, float fragmentLifetime, float fadeDuration, float massScale);

    [LibraryImport(Lib, EntryPoint = "dse_fracture_apply_damage")]
    internal static partial void dse_fracture_apply_damage(uint e, float damage, float ix, float iy, float iz);

    [LibraryImport(Lib, EntryPoint = "dse_fracture_trigger")]
    internal static partial void dse_fracture_trigger(uint e, float ix, float iy, float iz);

    [LibraryImport(Lib, EntryPoint = "dse_fracture_is_fractured")]
    internal static partial int dse_fracture_is_fractured(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_cloth_add")]
    internal static partial void dse_cloth_add(uint e, uint solverIterations, float stiffness, float damping, float bendStiffness);

    [LibraryImport(Lib, EntryPoint = "dse_cloth_set_wind")]
    internal static partial void dse_cloth_set_wind(uint e, float wx, float wy, float wz, float turbulence);

    [LibraryImport(Lib, EntryPoint = "dse_cloth_set_gravity")]
    internal static partial void dse_cloth_set_gravity(uint e, float gx, float gy, float gz);

    [LibraryImport(Lib, EntryPoint = "dse_cloth_pin_vertices")]
    internal static partial void dse_cloth_pin_vertices(uint e, uint[] vertices, int count);

    [LibraryImport(Lib, EntryPoint = "dse_cloth_add_sphere_collider")]
    internal static partial void dse_cloth_add_sphere_collider(uint e, uint colliderEntity, float radius);

    [LibraryImport(Lib, EntryPoint = "dse_fluid_add_emitter")]
    internal static partial void dse_fluid_add_emitter(uint e, int shape, float emissionRate, float particleLifetime, float emitSpeed);

    [LibraryImport(Lib, EntryPoint = "dse_fluid_set_physics")]
    internal static partial void dse_fluid_set_physics(uint e, float viscosity, float surfaceTension, float restDensity, float gasStiffness);

    [LibraryImport(Lib, EntryPoint = "dse_fluid_set_rendering")]
    internal static partial void dse_fluid_set_rendering(uint e, float r, float g, float b, float a, float refraction, float fresnel, float specular);

    [LibraryImport(Lib, EntryPoint = "dse_fluid_set_emit_direction")]
    internal static partial void dse_fluid_set_emit_direction(uint e, float dx, float dy, float dz, float spread);

    [LibraryImport(Lib, EntryPoint = "dse_fluid_set_floor")]
    internal static partial void dse_fluid_set_floor(uint e, float floorY, float restitution);

    [LibraryImport(Lib, EntryPoint = "dse_fluid_get_particle_count")]
    internal static partial uint dse_fluid_get_particle_count(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_add")]
    internal static partial void dse_ragdoll_add(uint e, float totalMass, int autoSetup, float jointStiffness, float jointDamping);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_activate")]
    internal static partial void dse_ragdoll_activate(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_deactivate")]
    internal static partial void dse_ragdoll_deactivate(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_is_active")]
    internal static partial int dse_ragdoll_is_active(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_set_collision_layer_mask")]
    internal static partial void dse_ragdoll_set_collision_layer_mask(uint e, uint layer, uint mask);

    [LibraryImport(Lib, EntryPoint = "dse_softbody_add")]
    internal static partial void dse_softbody_add(uint e, float stiffness, int iterations, float damping, float volumeStiffness);

    [LibraryImport(Lib, EntryPoint = "dse_softbody_set_gravity")]
    internal static partial void dse_softbody_set_gravity(uint e, int useGravity, float gravityScale);

    [LibraryImport(Lib, EntryPoint = "dse_softbody_pin_vertex")]
    internal static partial void dse_softbody_pin_vertex(uint e, int vertexIndex);

    [LibraryImport(Lib, EntryPoint = "dse_softbody_get_particle_count")]
    internal static partial uint dse_softbody_get_particle_count(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_vehicle_add")]
    internal static partial void dse_vehicle_add(uint e, float maxEngineForce, float maxBrakeForce, float maxSteerAngle);

    [LibraryImport(Lib, EntryPoint = "dse_vehicle_add_wheel")]
    internal static partial void dse_vehicle_add_wheel(uint e, float px, float py, float pz, float radius, int isDrive, int isSteer, float suspStiffness, float suspDamping);

    [LibraryImport(Lib, EntryPoint = "dse_vehicle_set_input")]
    internal static partial void dse_vehicle_set_input(uint e, float throttle, float brake, float steering);

    [LibraryImport(Lib, EntryPoint = "dse_vehicle_get_speed")]
    internal static partial float dse_vehicle_get_speed(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_vehicle_get_wheel_count")]
    internal static partial uint dse_vehicle_get_wheel_count(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_rope_add")]
    internal static partial void dse_rope_add(uint e, int segmentCount, float segmentLength, float damping, int iterations);

    [LibraryImport(Lib, EntryPoint = "dse_rope_set_anchors")]
    internal static partial void dse_rope_set_anchors(uint e, uint anchorA, uint anchorB, float oax, float oay, float oaz, float obx, float oby, float obz);

    [LibraryImport(Lib, EntryPoint = "dse_rope_get_positions")]
    internal static partial int dse_rope_get_positions(uint e, [Out] float[] outXyz, int maxPoints);

    [LibraryImport(Lib, EntryPoint = "dse_rope_set_gravity")]
    internal static partial void dse_rope_set_gravity(uint e, int useGravity, float gravityScale);

    [LibraryImport(Lib, EntryPoint = "dse_buoyancy_add")]
    internal static partial void dse_buoyancy_add(uint e, float waterLevel, float buoyancyForce, float waterDrag, float angularDrag, float submergeDepth);

    [LibraryImport(Lib, EntryPoint = "dse_buoyancy_add_sample_point")]
    internal static partial void dse_buoyancy_add_sample_point(uint e, float ox, float oy, float oz, float forceScale);

    [LibraryImport(Lib, EntryPoint = "dse_buoyancy_get_submerge_ratio")]
    internal static partial float dse_buoyancy_get_submerge_ratio(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_buoyancy_set_use_fluid")]
    internal static partial void dse_buoyancy_set_use_fluid(uint e, int useFluid);

    [LibraryImport(Lib, EntryPoint = "dse_weather_add")]
    internal static partial void dse_weather_add(uint e, int type, float intensity);

    [LibraryImport(Lib, EntryPoint = "dse_weather_set")]
    internal static partial void dse_weather_set(uint e, int type, float intensity, float windX, float windZ);

    [LibraryImport(Lib, EntryPoint = "dse_weather_set_spawn")]
    internal static partial void dse_weather_set_spawn(uint e, float radius, float height, int maxParticles);

    [LibraryImport(Lib, EntryPoint = "dse_snow_cover_add")]
    internal static partial void dse_snow_cover_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_snow_cover_set")]
    internal static partial void dse_snow_cover_set(uint e, float targetCoverage, float accumulationRate, float meltRate);

    [LibraryImport(Lib, EntryPoint = "dse_snow_set_appearance")]
    internal static partial void dse_snow_set_appearance(uint e, float albedoR, float albedoG, float albedoB, float roughness, float metallic, float threshold, float sharpness);

    [LibraryImport(Lib, EntryPoint = "dse_snow_cover_get")]
    internal static partial int dse_snow_cover_get(uint e, out float outCoverage, out float outTarget, out int outEnabled);

    [LibraryImport(Lib, EntryPoint = "dse_snow_cover_set_enabled")]
    internal static partial void dse_snow_cover_set_enabled(uint e, int enabled);

    [LibraryImport(Lib, EntryPoint = "dse_snow_set_texture", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_snow_set_texture(uint e, string path, float tiling);

    [LibraryImport(Lib, EntryPoint = "dse_snow_set_displacement")]
    internal static partial void dse_snow_set_displacement(uint e, float displacementHeight, float deformationStrength);

    [LibraryImport(Lib, EntryPoint = "dse_snow_cover_remove")]
    internal static partial void dse_snow_cover_remove(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_atmosphere_add")]
    internal static partial void dse_atmosphere_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_atmosphere_set_params")]
    internal static partial void dse_atmosphere_set_params(uint e, float planetRadius, float atmosphereHeight, float sunDiskAngle);

    [LibraryImport(Lib, EntryPoint = "dse_atmosphere_set_rayleigh")]
    internal static partial void dse_atmosphere_set_rayleigh(uint e, float coeffR, float coeffG, float coeffB, float scaleHeight);

    [LibraryImport(Lib, EntryPoint = "dse_atmosphere_set_mie")]
    internal static partial void dse_atmosphere_set_mie(uint e, float coeff, float scaleHeight, float g);

    [LibraryImport(Lib, EntryPoint = "dse_day_night_add")]
    internal static partial void dse_day_night_add(uint e, float timeOfDay, int autoAdvance, float timeSpeed);

    [LibraryImport(Lib, EntryPoint = "dse_day_night_set_time")]
    internal static partial void dse_day_night_set_time(uint e, float timeOfDay);

    [LibraryImport(Lib, EntryPoint = "dse_day_night_get_time")]
    internal static partial float dse_day_night_get_time(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_day_night_set_speed")]
    internal static partial void dse_day_night_set_speed(uint e, float speed);

    [LibraryImport(Lib, EntryPoint = "dse_day_night_set_location")]
    internal static partial void dse_day_night_set_location(uint e, float latitude, float longitude, int dayOfYear);

    [LibraryImport(Lib, EntryPoint = "dse_day_night_get_sun_elevation")]
    internal static partial float dse_day_night_get_sun_elevation(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_day_night_get_sun_direction")]
    internal static partial void dse_day_night_get_sun_direction(uint e, [Out] float[] outXyz);

    [LibraryImport(Lib, EntryPoint = "dse_volumetric_cloud_add")]
    internal static partial void dse_volumetric_cloud_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_cloud_set_layer")]
    internal static partial void dse_cloud_set_layer(uint e, float bottom, float top, float coverage, float density);

    [LibraryImport(Lib, EntryPoint = "dse_cloud_set_wind")]
    internal static partial void dse_cloud_set_wind(uint e, float dirX, float dirY, float speed);

    [LibraryImport(Lib, EntryPoint = "dse_anim2d_add")]
    internal static partial void dse_anim2d_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_anim2d_add_state", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_anim2d_add_state(uint e, string name, float fps, int loop, uint[] frameHandles, int handleCount);

    [LibraryImport(Lib, EntryPoint = "dse_anim2d_add_event", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_anim2d_add_event(uint e, string stateName, float normalizedTime, string eventName);
